--- a/kc-astro-shared-theme/package.json
+++ b/kc-astro-shared-theme/package.json
@@ -27,10 +27,10 @@
   "author": "Ken Chase",
   "repository": {
     "type": "git",
-    "url": "https://github.com/yourusername/kc-astro-shared-theme.git"
+    "url": "https://github.com/kenchase/kc-astro-websites.git"
   },
   "bugs": {
-    "url": "https://github.com/yourusername/kc-astro-shared-theme/issues"
+    "url": "https://github.com/kenchase/kc-astro-websites.git/issues"
   },
-  "homepage": "https://github.com/yourusername/kc-astro-shared-theme#readme"
+  "homepage": "https://github.com/kenchase/kc-astro-websites#readme"
 }
