--- a/kc-main/package.json
+++ b/kc-main/package.json
@@ -12,13 +12,16 @@
   ],
   "scripts": {
     "dev": "astro dev",
+    "check": "astro check",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "kc-astro-shared-theme": "file:../kc-astro-shared-theme",
+    "@astrojs/check": "^0.9.4",
     "astro": "^5.8.1",
-    "sass": "^1.89.1"
+    "kc-astro-shared-theme": "file:../kc-astro-shared-theme",
+    "sass": "^1.89.1",
+    "typescript": "^5.8.3"
   }
 }
