--- a/kc-web-design/package.json
+++ b/kc-web-design/package.json
@@ -12,14 +12,17 @@
   ],
   "scripts": {
     "dev": "astro dev",
+    "check": "astro check",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "^4.3.0",
     "astro": "^5.8.1",
     "kc-astro-shared-theme": "file:../kc-astro-shared-theme",
-    "sass": "^1.89.1"
+    "sass": "^1.89.1",
+    "typescript": "^5.8.3"
   }
 }
