--- a/kc-main/package.json
+++ b/kc-main/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/sitemap": "^3.4.1",
     "astro": "^5.8.1",
     "kc-astro-shared-theme": "file:../kc-astro-shared-theme",
     "sass": "^1.89.1",
