--- a/kc-web-design/package.json
+++ b/kc-web-design/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "^4.3.0",
+    "@astrojs/sitemap": "^3.4.1",
     "astro": "^5.8.1",
     "kc-astro-shared-theme": "file:../kc-astro-shared-theme",
     "sass": "^1.89.1",
